cambios en ejercicio cliente

--- a/DWC/Practica4.05/index.html
+++ b/DWC/Practica4.05/index.html
@@ -12,10 +12,10 @@
 
     <label for="elementSelect">Selecciona un tipo de campo:</label>
     <select id="elementSelect">
-        <option value="text">Texto</option>
+        <option value="text">Input</option>
         <option value="password">Contraseña</option>
         <option value="textarea">Área de Texto</option>
-        <option value="label">Etiqueta</option>
+        <option value="label">Label</option>
         <option value="image">Imagen</option>
         <option value="checkbox">Checkbox</option>
         <option value="radio">Radio</option>
