añadido pñan de empresa y inicio practica 4.08 cliente

--- a/EEIE/Proyecto/WebMarketingRMA/nosotros.html
+++ b/EEIE/Proyecto/WebMarketingRMA/nosotros.html
@@ -22,11 +22,10 @@
         </div>
     </header>
 
-
     <nav>
         <ul>
-            <li><a href="nosotros.html">Sobre Nosotros</a></li>
-            <li><a href="sevicios.html">Servicios</a></li>
+            <li><a href="./nosotros.html">Sobre Nosotros</a></li>
+            <li><a href="./sevicios.html">Servicios</a></li>
             <li><a href="#clients">Clientes</a></li>
             <li><a href="#contact">Contacto</a></li>
         </ul>
@@ -35,9 +34,31 @@
     <main>
         <section id="about">
             <h2>Sobre Nosotros</h2>
-            <p>En CodeInn ofrecemos INN Project Management una plataforma SaaS que ayuda a las empresas a centralizar y
-                optimizar sus
-                operaciones de gestión de proyectos, inventarios y relaciones con clientes y proveedores.</p>
+            <p>En CodeInn ofrecemos INN Project Management, una plataforma SaaS que ayuda a las empresas a centralizar y
+                optimizar sus operaciones de gestión de proyectos, inventarios y relaciones con clientes y proveedores.
+            </p>
+
+            <h3>Socios Fundadores:</h3>
+            <h4>Ramón Moreno Albert</h4>
+            <p><strong>Edad:</strong> 38 años</p>
+            <p><strong>D.N.I./N.I.F.:</strong> 45836810H</p>
+            <p><strong>Domicilio:</strong> c/ Heidelberg nº 6 piso 5 pta: B Elda (Alicante)</p>
+            <p><strong>Teléfono:</strong> 665684026</p>
+            <p><strong>Estado Civil:</strong> Casado</p>
+            <p><strong>Experiencia laboral:</strong> 5 años como desarrollador de software (backend)</p>
+            <p><strong>Titulación:</strong> Ciclo formativo de grado superior en Desarrollo de Aplicaciones Web (en
+                curso)</p>
+
+            <h4>Juan Pérez Ródenas</h4>
+            <p><strong>Edad:</strong> 35 años</p>
+            <p><strong>D.N.I./N.I.F.:</strong> 47290513L</p>
+            <p><strong>Domicilio:</strong> c/ San Fernando nº 12 piso 3 pta: C Alicante (Alicante)</p>
+            <p><strong>Teléfono:</strong> 612345789</p>
+            <p><strong>Estado Civil:</strong> Soltera</p>
+            <p><strong>Experiencia laboral:</strong> 3 años como diseñadora web, 4 años como desarrolladora de frontend
+                y UX/UI</p>
+            <p><strong>Titulación:</strong> Ciclo formativo de grado superior en Diseño y Gestión de la Producción
+                Gráfica</p>
         </section>
 
         <section id="services">
@@ -72,7 +93,6 @@
             </form>
         </section>
     </main>
-
 
     <footer>
         <p>&copy; 2024 CodeInn. Todos los derechos reservados.</p>
