--- a/DWC/Practica5.02/index.html
+++ b/DWC/Practica5.02/index.html
@@ -5,19 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
-<h1>Lista de peliculas</h1>
-<div>
-    <div id="lista">
-
-    </div>
-    <div id="info-pelicula">
-
-
-    </div>
-</div>
 
 <body>
+    <header>
+        <h1>Enciclopedia Star Wars</h1>
+    </header>
+    <main class="contenedor-principal">
+        <div id="lista">
+        </div>
+        <div id="info-pelicula">
+        </div>
+    </main>
+    <footer>
+        <small>DWC - RMA</small>
+    </footer>
 
 </body>
 <script type="module" src="./app.js"></script>
