continuo enciclopedia SW completa con async await

--- a/DWC/completa/index.html
+++ b/DWC/completa/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="cabecera">
-        <h1>Enciclpedia Star Wars</h1>
+        <h1>Enciclopedia Star Wars</h1>
     </header>
     <main id="contenido-principal">
         <!--Aquí el contenido-->
