Finalizada practica 5.04 cliente

--- a/DWC/Practica5.04/index.html
+++ b/DWC/Practica5.04/index.html
@@ -5,11 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctica 5.04 async/await</title>
-    <style>
-        .span-titulo {
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -17,7 +13,7 @@
         <h1>Enciclopedia Star Wars</h1>
     </header>
     <main id="contenido-principal">
-        <!--Aquí el contenido-->
+
     </main>
     <footer class="footer">
         <small>Práctica 5.04 - RMA</small>
