Interfaces: Pendiente de pulir el responsive de aplicaciones.html

--- a/DIW/Practica3/index.html
+++ b/DIW/Practica3/index.html
@@ -16,7 +16,7 @@
     <h1 class="header__titulo"><a href="index.html">IA aldía</a></h1>
     <nav class="header__nav">
       <ul class="header__nav-lista">
-        <li class="header__nav-item"><a href="">Aplicaciones</a></li>
+        <li class="header__nav-item"><a href="./aplicaciones.html">Aplicaciones</a></li>
         <li class="header__nav-item"><a href="">Noticias</a></li>
         <li class="header__nav-item"><a href="">En el cine</a></li>
       </ul>
