agregada propiedad sticky al menu de navegación

--- a/DIW/Practica3/aplicaciones.html
+++ b/DIW/Practica3/aplicaciones.html
@@ -11,17 +11,16 @@
 </head>
 
 <body>
-
     <header class="header">
         <h1 class="header__titulo"><a href="index.html">IA aldía</a></h1>
-        <nav class="header__nav">
-            <ul class="header__nav-lista">
-                <li class="header__nav-item"><a href="#">Aplicaciones</a></li>
-                <li class="header__nav-item"><a href="">Noticias</a></li>
-                <li class="header__nav-item"><a href="">En el cine</a></li>
-            </ul>
-        </nav>
     </header>
+    <nav class="header__nav">
+        <ul class="header__nav-lista">
+            <li class="header__nav-item"><a href="./aplicaciones.html">Aplicaciones</a></li>
+            <li class="header__nav-item"><a href="">Noticias</a></li>
+            <li class="header__nav-item"><a href="">En el cine</a></li>
+        </ul>
+    </nav>
 
     <main>
 
@@ -132,13 +131,14 @@
                             src="./materiales3/img/youtube.svg" alt="logo youtube"></a></li>
             </ul>
         </nav>
-
         <div class="contenedor-copyright">
             <p class="footer__copyright">2023 &copy; IA al día</p>
             <p class="footer__autor">Actividad realizada por Ramón Moreno Albert</p>
         </div>
 
+
     </footer>
+
 </body>
 
 </html>
