Interfaces: despacho-42.html

--- a/DIW/Practica3/en-el-cine.html
+++ b/DIW/Practica3/en-el-cine.html
@@ -19,7 +19,7 @@
             <li class="header__nav-item">
                 <a href="./aplicaciones.html">Aplicaciones</a>
             </li>
-            <li class="header__nav-item"><a href="">Noticias</a></li>
+            <li class="header__nav-item"><a href="./despacho-42.html">Noticias</a></li>
             <li id="header__nav-item-activo" class="header__nav-item"><a href="">En el cine</a></li>
         </ul>
     </nav>
