--- a/DIW/Practica3/index.html
+++ b/DIW/Practica3/index.html
@@ -19,7 +19,7 @@
       <li class="header__nav-item">
         <a href="./aplicaciones.html">Aplicaciones</a>
       </li>
-      <li class="header__nav-item"><a href="">Noticias</a></li>
+      <li class="header__nav-item"><a href="./despacho-42.html">Noticias</a></li>
       <li class="header__nav-item"><a href="./en-el-cine.html">En el cine</a></li>
     </ul>
   </nav>
