Cliente 6.01 pendiente de css, organizar y comprobar posibles errores

--- a/DWC/Practica6.01/index.html
+++ b/DWC/Practica6.01/index.html
@@ -15,8 +15,7 @@
     <nav>
         <button id="boton-anadir">Añadir</button>
         <button id="boton-listar">Listar</button>
-        <button>Buscar</button>
-        <button>Editar</button>
+        <button id="boton-buscar">Buscar</button>
     </nav>
     <main>
         <form class="formulario visible" id="formulario-anadir">
@@ -41,7 +40,32 @@
                 <p class="error-telefono"></p>
             </div>
             <button type="submit">Añadir</button>
+
         </form>
+        <form class="formulario visible" id="formulario-buscar">
+            <div>
+                <label for="nombre">Nombre</label>
+                <input type="text" name="nombre">
+                <p class="error-nombre"></p>
+            </div>
+            <div>
+                <label for="apellidos">Apellidos</label>
+                <input type="text" name="apellidos">
+                <p class="error-apellidos"></p>
+            </div>
+            <div>
+                <label for="direccion">Dirección</label>
+                <input type="text" name="direccion">
+                <p class="error-direccion"></p>
+            </div>
+            <div>
+                <label for="telefono">Telefono</label>
+                <input type="text" name="telefono">
+                <p class="error-telefono"></p>
+            </div>
+            <button type="submit">Buscar</button>
+        </form>
+
         <ul id="lista-agenda"></ul>
         <button id="boton-borrar-agenda">Borrar agenda</button>
         <ul id="lista-contactos"></ul>
