Práctica 6.02 cliente, cambiado telefono por id, implementar borrado en FB al sincronizar

--- a/DWC/Practica6.02/index.html
+++ b/DWC/Practica6.02/index.html
@@ -68,9 +68,24 @@
                 <button type="submit">Buscar</button>
             </form>
 
-            <ul class="lista-contactos" id="lista-agenda"></ul>
 
             <ul id="lista-contactos-filtrados"></ul>
+            <div>
+                <p>Pulsa para sincronizar localStorage en fireStorage</p>
+                <button id="sincronizar">Sincronizar</button>
+            </div>
+            <div>
+                <hgroup>
+                    <h3>Listas firebase y firestore</h3>
+                    <p>Aquí se muestra las diferecias que pueden haber entre los dos tipos de alamcenamientos.</p>
+                </hgroup>
+                <ul id="lista-comparacion-ls">
+
+                </ul>
+                <ul id="lista-comparacion-fb">
+
+                </ul>
+            </div>
         </main>
     </div>
     <footer class="pie-pagina">
