Finalizada practica6.02 cliente

--- a/DWC/Practica6.02/index.html
+++ b/DWC/Practica6.02/index.html
@@ -77,14 +77,20 @@
             <div>
                 <hgroup>
                     <h3>Listas firebase y firestore</h3>
-                    <p>Aquí se muestra las diferecias que pueden haber entre los dos tipos de alamcenamientos.</p>
+                    <p>Aquí se muestra las diferencias que pueden haber entre los dos tipos de alamcenamientos.</p>
                 </hgroup>
-                <ul id="lista-comparacion-ls">
-
-                </ul>
-                <ul id="lista-comparacion-fb">
-
-                </ul>
+                <div class="listas-comprobación">
+                    <div>
+                        <h2>localStorge</h2>
+                        <ul id="lista-comparacion-ls">
+                        </ul>
+                    </div>
+                    <div>
+                        <h2>fireBase</h2>
+                        <ul id="lista-comparacion-fb">
+                        </ul>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
