entrega practica 3 interfaces

--- a/DIW/Practica3/aplicaciones.html
+++ b/DIW/Practica3/aplicaciones.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./materiales3/img/favicon.ico" type="image/x-icon">
 
-  <title>Document</title>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./css/style.css" />
+  <title> Aplicaciones de Inteligencia Artificial práctica 3 RMA</title>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -136,13 +137,16 @@
     <nav class="footer__nav-social">
       <ul class="footer__nav-social__lista">
         <li class="footer__nav-social__logo">
-          <a href="#" target="_blank"><img src="./materiales3/img/twitter.svg" alt="logo twiter" /></a>
+          <a href="#" target="_blank"><img class="footer__nav-social__lista-img" src="./materiales3/img/twitter.svg"
+              alt="logo twiter"></a>
         </li>
         <li class="footer__nav-social__logo">
-          <a href="#" target="_blank"><img src="./materiales3/img/instagram.svg" alt="logo isntagram" /></a>
+          <a href="#" target="_blank"><img class="footer__nav-social__lista-img" src="./materiales3/img/instagram.svg"
+              alt="logo isntagram"></a>
         </li>
         <li class="footer__nav-social__logo">
-          <a href="#" target="_blank"><img src="./materiales3/img/youtube.svg" alt="logo youtube" /></a>
+          <a href="#" target="_blank"><img class="footer__nav-social__lista-img" src="./materiales3/img/youtube.svg"
+              alt="logo youtube"></a>
         </li>
       </ul>
     </nav>
