--- a/DIW/Practica3/despacho-42.html
+++ b/DIW/Practica3/despacho-42.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Document</title>
+    <link rel="shortcut icon" href="./materiales3/img/favicon.ico" type="image/x-icon">
+    <title>Despacho 42: Inteligencia artificial y arte con Andrés
+        Burbano práctica 3 RMA</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
