--- a/DIW/Practica3/en-el-cine.html
+++ b/DIW/Practica3/en-el-cine.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./materiales3/img/favicon.ico" type="image/x-icon">
 
-    <title>Document</title>
+    <title>La inteligencia artificial en el cine Práctica 3 RMA</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -28,11 +29,11 @@
             <h2 class="cine-section__titulo">La inteligencia artificial en el cine</h2>
 
             <article class="cine-section__articulo">
-                <figure
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
-                    class="cine-section__articulo-figure">
-                    <iframe class="cine-section__articulo-iframe" src="https://www.youtube.com/embed/_19pRsZRiz4"
+                <figure class="cine-section__articulo-figure">
+                    <iframe
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
+                        class="cine-section__articulo-iframe" src="https://www.youtube.com/embed/_19pRsZRiz4"
                         title="A.I. Inteligencia Artificial"></iframe>
                     <figcaption class="cine-section__articulo-figcaption">
                         <h2 class="cine-section__articulo-figcaption-h2"><cite>A.I. Inteligencia Artificial</cite>. Por
