--- a/DIW/Practica3/index.html
+++ b/DIW/Practica3/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Document</title>
+  <link rel="shortcut icon" href="./materiales3/img/favicon.ico" type="image/x-icon">
+
+  <title>Noticias y recursos sobre inteligencia artificial -práctica 3 RMA</title>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -63,7 +65,8 @@
           y defiende que los científicos deben colaborar en el control de esta
           tecnología…
         </p>
-        <a class="section-articulos__articulo__leermas" href="#"><span>&gt;</span> Leer más...</a>
+        <a class="section-articulos__articulo__leermas" href="#"><span
+            class="section-articulos__articulo-span">&gt;</span> Leer más...</a>
       </article>
 
       <article class="section-articulos__articulo">
@@ -82,7 +85,8 @@
           en estos momentos en el Parlamento Europeo. La ley pretende proteger
           a los consumidores que usen o sean objeto de sistemas de IA…
         </p>
-        <a class="section-articulos__articulo__leermas" href="#"><span>&gt;</span> Leer más...</a>
+        <a class="section-articulos__articulo__leermas" href="#"><span
+            class="section-articulos__articulo-span">&gt;</span> Leer más...</a>
       </article>
 
       <article class="section-articulos__articulo">
@@ -102,7 +106,8 @@
           con Andrés Burbano, profesor de los estudios de Artes y Humanidades
           de la UOC…
         </p>
-        <a class="section-articulos__articulo__leermas" href="despacho-42.html"><span>&gt;</span> Leer más...</a>
+        <a class="section-articulos__articulo__leermas" href="despacho-42.html"><span
+            class="section-articulos__articulo-span">&gt;</span> Leer más...</a>
       </article>
     </section>
   </main>
